Fixed topbar z-index to 998 and side to 999

--- a/public/css/sidebar.css
+++ b/public/css/sidebar.css
@@ -5,7 +5,7 @@
     width: 110px;
     color: #fff;
     background-color: #000000;
-    z-index: 1;
+    z-index: 999;
 }
 
 #logo_iav {
@@ -23,6 +23,7 @@
     font-size: 16px;
     line-height: 19px;
     box-shadow: 0 -1px 0 0 rgba(49,61,79,0.5);
+    z-index:998;
 }
 
 #user a {
